force-app/main/default/objects/DSales_Matriz_GEX__c/DSales_Matriz_GEX__c.object-meta.xml
<CustomObject>
    <label>Matriz</label>
    <nameField>
        <label>Nombre de Matriz</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>