force-app/main/default/objects/DSales_Matriz_GEX__c/fields/DSALES_CloneMatriz__c.field-meta.xml
<CustomField>
    <fullName>DSALES_CloneMatriz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matriz</label>
    <referenceTo>DSales_Matriz_GEX__c</referenceTo>
    <relationshipLabel>Matrices</relationshipLabel>
    <relationshipName>Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>