force-app/main/default/objects/DSales_Matriz_GEX__c/fields/DSALES_EsClone__c.field-meta.xml
<CustomField>
    <fullName>DSALES_EsClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Clon</label>
    <type>Checkbox</type>
</CustomField>