force-app/main/default/objects/DSales_Matriz_GEX__c/fields/DSales_Region_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSales_Region_GEX__c</fullName>
    <label>Región</label>
    <length>10</length>
    <type>Text</type>
</CustomField>