force-app/main/default/objects/DSales_Matriz_GEX__c/fields/DSALES_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Servicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Matrices</relationshipLabel>
    <relationshipName>Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>