force-app/main/default/objects/DSales_Matriz_GEX__c/fields/DSALES_Tiempogex__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tiempogex__c</fullName>
    <label>Tiempo de garantía extendida</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_Tiempodegarantaextendida</valueSetName>
    </valueSet>
</CustomField>