force-app/main/default/objects/DSales_Matriz_GEX__c/fields/DSALES_Tipo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipo__c</fullName>
    <formula>IF(DSALES_EsClone__c, &quot;Matriz Clon&quot;, &quot;Matriz Original&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>