force-app/main/default/objects/DSales_Matriz_GEX__c/validationRules/ValidacionActivo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacionActivo</fullName>
    <active>true</active>
    <errorConditionFormula>AND( DSALES_EsClone__c,  DSALES_Activo__c )</errorConditionFormula>
    <errorMessage>Una matriz clonada no puede estar activa</errorMessage>
</ValidationRule>