force-app/main/default/objects/DSales_Matriz_GEX__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>DSALES_Activo__c</columns>
    <columns>DSALES_Tipo__c</columns>
    <columns>DSALES_Tiempogex__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DSALES_EsClone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todos</label>
</ListView>